feat: 문서타입인 경우 제외